 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.
 8. When adjusting track numbers in tag editor, start from first actual track.
 9. Only enable 'center on current track' action if there is a current track.
10. Use comma to split multiple genres in tooltip.
11. Don't URL encode scrobble keys, just values.

1.4.0
-----
  1. Allow setting of custom device name for UMS and MTP devices.
  2. Allow to use table-view for search results.
  3. Add option to auto-switch to context view X seconds after playback starts,
     and switch back X seconds after stopped.
  4. Add option to auto-scroll lyrics - accessed via context-menu in lyrics
     view.
  5. Use smaller font for sidebar.
  6. Make cover-widget more stylized and smaller.
  7. Move cover-widget next to song details.
  8. Slightly larger play/pause button.
  9. Move position slider in-between controls.
 10. Use system libebur128 if found.
 11. Use smaller font for second line of current song details.
 12. Don't show song details in titlebar - this only duplicates info that is
     already clearly visible in the main window.
 13. Remove space between toolbar and views, and reduce spacing elsewhere.
 14. Use a thin splitter between playqueue and views.
 15. Set 'no interaction' flag on more labels, so that Oxygen's window drag code
     works on these.
 16. Add support for comments. These are read directly from the song file when
     the tag-editor is used, and they are NOT saved in Cantata's cache file.
     Comments are only read if MPD is configured to support the COMMENT field.
 17. Install Cantata's list of lyrics providers to INSTALL/share/cantata/config
 18. Read lyrics providers from each lyrics_*.xml file in
     ~/.local/share/cantata/config, and INSTALL/share/cantata/config
 19. Attempt to respect menubar usage of current desktop. For Windows and Gnome;
     menu button is used, and menubar hidden. For Mac and Unity; menubar is